Update CSS rules for header elements
Create CSS rule for h1, h2 and h3 and give them global properties.
Replace CSS rule for h1 immediately after this rule. Create rule for h3.
Change all <h2> elements to <h3> elements at index.html.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="col-12 col-md-6">
-          <h2>Tworzenie Stron WWW</h2>
+          <h3>Tworzenie Stron WWW</h3>
           <p>Jesteśmy pasjonatami tworzenia unikalnych stron internetowych, które wyróżniają się nie tylko estetyką, ale także funkcjonalnością. Nasza mała firma skupia się na indywidualnym podejściu do każdego klienta, dopasowując projekt do Twoich unikalnych potrzeb i celów biznesowych.</p>
           <button>Zobacz Galerię</button>
         </div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="col-12 col-md-6">
-          <h2>Projektowanie WWW</h2>
+          <h3>Projektowanie WWW</h3>
           <p>Specjalizujemy się w projektowaniu stron internetowych, przywiązując wagę do detali, estetyki i funkcjonalności. Jesteśmy małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni online, które nie tylko przyciągają uwagę, ale także skutecznie przekazują wartości Twojego biznesu.</p>
           <button>Zobacz Galerię</button>
         </div>
@@ -103,7 +103,7 @@
           <div class="wrapper">
         
             <div>
-              <h2>O Nas</h2>
+              <h3>O Nas</h3>
                 <p>Kejaro to mała firma, która zajmuje się budową i administracją stron internetowych. Oferujemy kompleksowe usługi, od opracowania koncepcji i projektu, po wdrożenie i promocję strony.</p>
             </div>
         
@@ -123,7 +123,7 @@
   <section class="contact">
     <div class="container">
       <p>Masz biznes, ale nie masz strony internetowej?</p>
-      <p>My to załatwimy!</p>
+      <h2>My to załatwimy!</h2>
       <button>Skontaktuj się z nami</button>
     </div>
   </section>
