Update join section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
   </section>
 
-  <section class="contact">
+  <section class="join">
     <div class="container">
       <p>Masz biznes, ale nie masz strony internetowej?</p>
       <h2>My to załatwimy!</h2>
