--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       </div>
 
-      <button>Nasze Usługi</button>
+      <button><a href="service.html">Nasze Usługi</a></button>
 
     </div>
   </header>
@@ -67,7 +67,7 @@
           <p>Jesteśmy pasjonatami tworzenia unikalnych stron internetowych, które wyróżniają się nie tylko estetyką, ale
             także funkcjonalnością. Nasza mała firma skupia się na indywidualnym podejściu do każdego klienta,
             dopasowując projekt do Twoich unikalnych potrzeb i celów biznesowych.</p>
-          <button>Zobacz Galerię</button>
+          <button><a href="gallery.html">Zobacz Galerię</a></button>
         </div>
 
       </div>
@@ -83,7 +83,7 @@
           <p>Specjalizujemy się w projektowaniu stron internetowych, przywiązując wagę do detali, estetyki i
             funkcjonalności. Jesteśmy małą firmą z wielkim zapałem do tworzenia unikalnych przestrzeni online, które nie
             tylko przyciągają uwagę, ale także skutecznie przekazują wartości Twojego biznesu.</p>
-          <button>Zobacz Galerię</button>
+          <button><a href="gallery.html">Zobacz Galerię</a></button>
         </div>
 
       </div>
@@ -101,7 +101,7 @@
           <p>Kejaro to mała firma, która zajmuje się budową i administracją stron internetowych. Oferujemy
             kompleksowe usługi, od opracowania koncepcji i projektu, po wdrożenie i promocję strony.</p>
         
-          <button>Czytaj Więcej</button>
+          <button><a href="about.html">Czytaj Więcej</a></button>
         
         </div>
 
@@ -117,7 +117,7 @@
     <div class="container">
       <p>Masz biznes, ale nie masz strony internetowej?</p>
       <h2>My to załatwimy!</h2>
-      <button>Skontaktuj się z nami</button>
+      <button><a href="contact.html">Skontaktuj się z nami</a></button>
     </div>
   </section>
 
