Update header and contact section at all pages

--- a/contact.html
+++ b/contact.html
@@ -20,44 +20,36 @@
     <header>
       <div class="container">
   
-        <div class="row">
-          <nav>
+        <nav>
   
-            <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
-  
-            <ul>
-              <li><a href="index.html"><img src="img/home.png" alt="Home Icon"></a></li>
-              <li><a href="service.html">Usługi</a></li>
-              <li><a href="about.html">O nas</a></li>
-              <li><a href="#"><img src="img/contact.png" alt="Home Icon"></a></li>
-              <li><a href="gallery.html">Galeria</a></li>
-            </ul>
-  
-          </nav>
-        </div>
+          <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Logo" /></a>
+
+          <ul>
+            <li><a href="index.html"><img src="img/home.png" alt="Home Icon"></a></li>
+            <li><a href="service.html">Usługi</a></li>
+            <li><a href="about.html">O nas</a></li>
+            <li><a href="#"><img src="img/contact.png" alt="Home Icon"></a></li>
+            <li><a href="gallery.html">Galeria</a></li>
+          </ul>
+
+        </nav>
   
         <div class="row">
   
-          <div class="col-12 col-md-7">
+          <div class="col-7">
             <div class="header-wrapper">
               <h1>KEJARO</h1>
               <p>Twoja strona - nasza pasja</p>
             </div>
           </div>
   
-          <div class="col-12 col-md-5">
-            <div class="globus-wrapper">
+          <div class="col-5">
               <img class="globus" src="img/globus.png" alt="Globus" />
-            </div>
           </div>
   
         </div>
   
-        <div class="row">
-          <div class="button-wrapper">
-            <button>Nasze Usługi</button>
-          </div>
-        </div>
+        <button><a href="service.html">Nasze Usługi</a></button>
   
       </div>
     </header>
