Update pages service, about and contact

--- a/about.html
+++ b/about.html
@@ -58,11 +58,11 @@
 
       <div class="row">
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <img src="img/miroslawprofil.jpg" width="300" height="300" alt="Web Developer">
         </div>
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
         </div>
 
@@ -70,11 +70,11 @@
 
       <div class="row">
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <img src="img/kevinprofil.jpg" width="300" height="300" alt="Web Design">
         </div>
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
         </div>
 
@@ -82,11 +82,11 @@
 
       <div class="row">
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <img src="img/jaquelineprofil.jpg" width="300" height="300" alt="Web Design">
         </div>
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
         </div>
 
@@ -94,11 +94,11 @@
 
       <div class="row">
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <img src="img/profilrobin.jpg" width="300" height="300" alt="Web Design">
         </div>
 
-        <div class="col-12 col-md-6">
+        <div class="col-6">
           <p>Aliquam ullamcorper in tellus sed rutrum. Nullam quis efficitur tortor. Mauris ullamcorper bibendum nulla ac vulputate. Sed vel volutpat tortor. Suspendisse potenti. Praesent quis quam sem. Nullam vehicula est et tellus iaculis, in porta urna imperdiet.</p>
         </div>
 
