--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,9 @@
       </div>
     </header>
 
-    <section>
+    <section class="contact">
       <div class="container">
-        <h2 class="section-title">Skontaktuj się z nami</h2>
+        <h3 class="section-title">Skontaktuj się z nami</h3>
   
         <div class="contact-wrapper">
           <form>
@@ -67,15 +67,15 @@
             <button type="submit" href="#" class="btn btn-one">submit</button>
           </form>
           <div class="contact-details">
-            <h3>sales specialist</h3>
+            <h4>sales specialist</h4>
             <p>Elinor Kinder</p>
             
-            <h3>address</h3>
+            <h4>address</h4>
             <p>299 Browning Lane<br>
               Cortland<br>
               13045 New York</p>
   
-            <h3>phone</h3>
+            <h4>phone</h4>
             <p>607-835-7016</p>
           </div>
         </div>
